--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@middy/core": "^4.6.4",
+    "@middy/http-error-handler": "^4.6.4",
+    "@middy/http-json-body-parser": "^4.6.4",
+    "@middy/validator": "^4.6.4",
     "aws-sdk": "^2.1459.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
