--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "serverless-webpack": "^5.13.0"
+    "@types/aws-sdk": "^2.7.0",
+    "serverless-webpack": "^5.13.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
