--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@middy/http-error-handler": "^4.6.4",
     "@middy/http-json-body-parser": "^4.6.4",
     "@middy/validator": "^4.6.4",
+    "@types/aws-lambda": "^8.10.121",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/uuid": "^9.0.4",
     "aws-sdk": "^2.1459.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
+    "@types/bcryptjs": "^2.4.4",
     "serverless-webpack": "^5.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
