--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "aws-sdk": "^2.1459.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "typescript": "^4.3.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.4",
     "serverless-webpack": "^5.13.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   }
 }
