--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
         "module": "commonjs",
         "outDir": "./dist",
         "strict": true,
-        "esModuleInterop": true
-    }
+        "esModuleInterop": true,
+        "skipLibCheck": true
+    },
+    "include": ["./src/**/*.ts"],
+    "exclude": ["node_modules"]
 }
